# confile

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: cat.h  file.h  grep.h  ls.h
src/: cat.cc  file.cc  grep.cc  ls.cc  main.cc
